<?xml version="1.0"?>
<package>
  <name>sheldon</name>
  <version>0.0.0</version>
  <description>Launch files for the Sheldon Robot</description>
  <maintainer email="mattcurf@gmail.com">Matt Curfman</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>kobuki_ftdi</run_depend>
  <run_depend>kobuki_description</run_depend>
  <run_depend>kobuki_node</run_depend>
</package>
