<package>
  <name>sheldon_joybuttons</name>
  <version>0.0.0</version>
  <description>Robot joystick button support for the sheldon robot</description>
  <maintainer email="mattcurf@gmail.com">Matt Curfman</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joy</run_depend>
</package>
