<package>
  <name>sheldon_servos</name>
  <version>0.0.0</version>
  <description>Robot servo controller</description>
  <maintainer email="shinsel.robots@gmail.com">Dave Shinsel</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>dynamixel_controllers</run_depend>
</package>
