<package>
  <name>sheldon_teleop</name>
  <version>2.4.2</version>
  <description>modified from turtlebot_teleop package by Melonee Wise </description>
  <maintainer email="shinsel.robots@gmail.com">Dave Shinsel</maintainer>
  <license>BSD</license>
  <author email="mwise@willowgarage.com">Melonee Wise</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
</package>
