<?xml version="1.0"?>
<package>
  <name>behavior_utils</name>
  <version>0.0.1</version>
  <description>description</description>
  <maintainer email="realsense-sw@intel.com">RealSense Software</maintainer>
  <license>BSD</license>
  <author>RealSense SW</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_generation</run_depend>

  <export>
  </export>  
</package>
